// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tasks-unified — snapshot сборки промта > enriched + withConfidence + withSourceQuote + meetingDateIso + orgContext (Wave 3) > system-enriched 1`] = `
"Ты — деловой ассистент. Извлеки из встречи список задач, которые были поставлены или зафиксированы.

Для каждой задачи укажи:
- "title": краткая формулировка задачи (на русском, императив, до 100 символов).
- "assignee": ФИО или роль ответственного (как было произнесено). Если не назван — null.
- "dueDate": срок: ISO-8601 (YYYY-MM-DD) или относительная фраза («к концу недели», «до пятницы»). null — если срока нет.

Не выдумывай задач. Если задач не было — верни пустой массив.

Различай строго: обязательство («я сделаю», «беру на себя») = ЗАДАЧА; пожелание («надо бы», «хорошо бы») и идея («было бы здорово») — НЕ задачи, не извлекай их как задачи. Если исполнитель неоднозначен или спикер не определён — assignee=null (не выводи из контекста). null — это честный сигнал отсутствия, а не пробел для заполнения.

Дополнительные поля (обогащённый формат):
- "suggestedAssigneeHint": нормализованное ФИО или роль ответственного для последующего match'инга с Person (например, "Иванов Сергей" вместо "Серёжа"). null если непонятно.
- "suggestedDueDate": та же дата, что и dueDate, но только ISO-8601 — без свободных фраз. null если срок не указан.
- "suggestedPriority": один из "urgent" | "high" | "medium" | "low" по контексту обсуждения. null если приоритет не обсуждался.

Контекст организации (проекты, цели, известные сотрудники) — в user-сообщении после диалога. Используй его, чтобы уточнять assignee/priority, но не выдумывай.

Поле "sourceQuote" — точная цитата из транскрипта длиной до 200 символов (1-3 предложения), на основании которой ты сформулировал задачу. ОБЯЗАТЕЛЬНО — без цитаты задача не валидна.

Поле "confidence" — число 0..1: насколько ты уверен, что это РЕАЛЬНАЯ задача (а не реплика «надо бы когда-нибудь»). 0.9+ только если явное поручение с ответственным.

Вызови инструмент \`extract_tasks\` с заполненными полями. Не возвращай свободный текст.

Шкала confidence (0..1):
- 0.3 — намёк, одиночная фраза, нет подтверждения вторым высказыванием.
- 0.6 — явное высказывание одного участника, без обсуждения.
- 0.85 — обсуждённое решение / явное поручение с ответственным и сроком.
- 0.95+ — обсуждено двумя+ участниками, согласовано, зафиксировано.

ПРАВИЛО: лучше осторожнее. 0.5 честных лучше 0.9 с галлюцинацией.
Если не уверен — снижай confidence, не повышай."
`;

exports[`tasks-unified — snapshot сборки промта > enriched + withConfidence + withSourceQuote + meetingDateIso + orgContext (Wave 3) > user-enriched 1`] = `
"Тип встречи: team
Заголовок: Планёрка по релизу
Дата встречи: 2026-05-24

Проекты организации:
  - BACKEND: Команда платформы

Активные цели:
  - Выпустить v2 до конца квартала

Сотрудники организации:
  - Сергей Иванов (backend)
  - Маша Петрова (юрист)

Диалог:
[00:00-00:04] Алиса: Сергей, до пятницы сделай отчёт по нагрузке.
[00:05-00:07] Сергей: Окей, до пятницы пришлю.
[00:08-00:12] Алиса: Маша, согласуй договор с юристом к среде."
`;

exports[`tasks-unified — snapshot сборки промта > legacy (без опций) — простой 3-поля промт без CONFIDENCE_CALIBRATION > system-legacy 1`] = `
"Ты — деловой ассистент. Извлеки из встречи список задач, которые были поставлены или зафиксированы.

Для каждой задачи укажи:
- "title": краткая формулировка задачи (на русском, императив, до 100 символов).
- "assignee": ФИО или роль ответственного (как было произнесено). Если не назван — null.
- "dueDate": срок: ISO-8601 (YYYY-MM-DD) или относительная фраза («к концу недели», «до пятницы»). null — если срока нет.

Не выдумывай задач. Если задач не было — верни пустой массив.

Различай строго: обязательство («я сделаю», «беру на себя») = ЗАДАЧА; пожелание («надо бы», «хорошо бы») и идея («было бы здорово») — НЕ задачи, не извлекай их как задачи. Если исполнитель неоднозначен или спикер не определён — assignee=null (не выводи из контекста). null — это честный сигнал отсутствия, а не пробел для заполнения.

Вызови инструмент \`extract_tasks\` с заполненными полями. Не возвращай свободный текст."
`;

exports[`tasks-unified — snapshot сборки промта > legacy (без опций) — простой 3-поля промт без CONFIDENCE_CALIBRATION > user-legacy 1`] = `
"Тип встречи: team
Заголовок: Планёрка по релизу

Диалог:
[00:00-00:04] Алиса: Сергей, до пятницы сделай отчёт по нагрузке.
[00:05-00:07] Сергей: Окей, до пятницы пришлю.
[00:08-00:12] Алиса: Маша, согласуй договор с юристом к среде."
`;
